# horoscopeAdviser

./: .pre-commit-config.yaml  README.md  docker-compose.ci.yml  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 49bcae845342_added_subscription_table.py  6038c550e8e9_initial_models.py
config/: .env.example
docker/telegram_bot/: Dockerfile
docs/: horoscope_advisor_flow.drawio
server/horoscopes/: enums.py  services.py
server/horoscopes/base/: clients.py  fabrics.py  methods.py  scrappers.py  sender.py  utils.py
server/horoscopes/db/: __init__.py  base.py  base_class.py  session.py
server/horoscopes/models/: subscription.py  user.py
server/settings/components/: __init__.py  database.py  horoscope_adviser.py  telegram_bot.py
server/telegram_bot/: bot.py  exception.py  message_handlers.py  states.py
server/telegram_bot/handlers/: __init__.py  sign.py  start.py  start_command.py  subscription.py
src/: Dockerfile  Makefile  alembic.ini  entrypoint.sh  main.py  pyproject.toml
src/core/: config.py  const.py
src/core/exceptions/: user.py
src/db/: __init__.py  enums.py  session.py
src/db/models/: __init__.py  base.py  subscription.py  user.py
src/db/repositories/: base.py  subscription.py  user.py
src/http_requests/: client.py
src/migrations/: env.py
src/migrations/versions/: 2023-09-16_added_subscription_and_user_model.py  2023-09-30_added_unique_constraint_to_subscription.py
src/old_telegram_bot/: bot.py  states.py
src/old_telegram_bot/handlers/: sign.py  start.py  subscription.py
src/schemas/: base.py  subscription.py  user.py
src/services/: subscription.py  telegram.py
src/services/horoscope/: horoscope_by_source.py
src/services/scrappers/: base.py
src/services/scrappers/thousand_and_one/: get_today_sign.py
src/services/senders/: base.py
src/services/senders/horo_mail/: get_today_sign.py  mappings.py
src/services/senders/thousand_and_one/: get_today_sign.py  mappings.py
src/services/source/: base.py  horo_mail.py  mappings.py  thousand_and_one.py
src/telegram_bot/: bot.py  example.py
src/telegram_bot/handlers/: sign.py
src/telegram_bot/keyboards/: common.py  horoscope_signs.py  sources.py
src/telegram_bot/routers/: common.py  default_settings.py  horoscope.py
src/tests/: conftest.py  utils.py
src/tests/factories/: base.py  subscription.py  user.py
src/tests/services/: conftest.py  test_subscription.py  test_telegram.py
src/tests/services/examples/: 1001horo_today_example.html  mail_horo_today_example.html
src/tests/services/scrappers/: test_1001_get_today_sign.py  test_horo_mail.py
src/tests/services/source/: test_1001.py  test_horo_mail.py
tests/: conftest.py
tests/horoscopes/: test_enums.py
(+30 files in other folders)
