[tool.poetry]
name = "horoscope_adviser"
version = "0.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.10.0"
requests = "^2.27.1"
pytest = "^6.2.5"
flake8 = "^4.0.1"
mypy = "^0.931"
isort = "^5.10.1"
types-requests = "^2.27.8"
black = "^22.1.0"
autoconfig = "^5.0.0"
python-decouple = "^3.6"
pyTelegramBotAPI = "^4.4.0"
SQLAlchemy = "^1.4.35"
inflection = "^0.5.1"
alembic = "^1.7.7"
python-dotenv = "^0.20.0"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
